--- a/client/src/components/Loader/style.css
+++ b/client/src/components/Loader/style.css
@@ -1,8 +1,8 @@
 .lds-spinner {
-    display: inline-block;
     position: relative;
-    display: flex;
-    justify-content: center;
+    display: inline-block;
+    margin-inline: auto;
+    left: -40px;
 }
 .lds-spinner div {
     transform-origin: 40px 40px;
